CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( RapaV4L2SimpleTest )

INCLUDE_DIRECTORIES( ${RapaV4L2_SOURCE_DIR} )
SET( SOURCES Main.cpp )
ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} RapaV4L2 )

INSTALL( TARGETS  ${PROJECT_NAME}
		 RUNTIME DESTINATION "bin"
		 LIBRARY DESTINATION "lib"
		 ARCHIVE DESTINATION "lib" )

