CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( "RapaV4L2Viewer" )
	
SET(	SOURCES
		RV4L2QDeviceUpdater.h
		RV4L2QDeviceUpdater.cpp
		RV4L2QImageWidget.h
		RV4L2QImageWidget.cpp
		RV4L2QDeviceWidget.h
		RV4L2QDeviceWidget.cpp
		Main.cpp 
	)

INCLUDE( RapaFindQt )
IF( RAPA_QT_FOUND )
	
	INCLUDE_DIRECTORIES( ${RapaV4L2_SOURCE_DIR} )
	ADD_EXECUTABLE( ${PROJECT_NAME} WIN32 ${SOURCES} )
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} RapaV4L2 )
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${RAPA_QT_LINK_LIBRARIES} )

	#
	# Install
	#
	INSTALL( TARGETS  ${PROJECT_NAME}
			 RUNTIME DESTINATION "bin" 
			 LIBRARY DESTINATION "lib"
			 ARCHIVE DESTINATION "lib" )
ENDIF()




